--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         margin: 0 auto;
     }
 
+    .button {
+        margin-bottom: 20px;
+    }
+
     a {
         padding-bottom: 20px;
         display: inline-block;
